kubernetes/apps/redis-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: redis-db
spec:
  type: LoadBalancer
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
